# sharded_storage

./: .gitignore  Cargo.toml  README.md  Shared Storage.key  test.py
kzg10/: Cargo.toml
kzg10/src/: main.rs
monitoring/: manager.sh  stateFile
node/: Cargo.toml  README.md
node/src/: StateRegistry.json  commitment.rs  contract.rs  error.rs  main.rs  p2p.rs  storage.rs
shamir-ss/: Cargo.toml
shamir-ss/src/: lib.rs
smart_contracts/contracts/: StateRegistry.sol
smart_contracts/scripts/: deploy.js
smart_contracts/test/: StateRegistry.js
