[package]
name = "node"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
bincode = "1.3.3"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3"
ark-ff = "0.4.0"
ark-bn254 = "0.4.0"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-ec = { version = "0.4.2", features = ["parallel"] }
ark-poly = { version = "0.4.2", features = ["parallel"] }
ark-poly-commit = { version = "0.3.0", features = ["parallel"] }
#futures = "0.3.28"
#libp2p = { version = "0.51.1", features = ["tokio", "gossipsub", "mdns", "tcp", "dns", "websocket", "noise", "mplex", "yamux", "macros"] }
rand = "0.8.5"
axum = "0.6.12"
reqwest = "0.11.16"
web3 = "0.18.0"
secp256k1 = "0.27.0"

shamir-ss = { path = "../shamir-ss" }
once_cell = "1.17.1"
